# paleoeurope-dem

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  fabdem_index.parquet  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  notebook_test.yml  test.yml
configs/: default.yml  europe_full.yml
data/paleocostlines/: README.md
data/sea_level_curves/: spratt_lisiecki_2016_simplified.csv
distributed/: Dockerfile  README.md  docker-compose.yml  tasks.py
docs/: architecture_diagrams.md  data_catalogue.md
paleoeurope/: __init__.py
paleoeurope/fusion/: __init__.py  blender.py  datum_corrector.py  fabdem_loader.py  gebco_loader.py  pipeline.py
paleoeurope/gia/: __init__.py  correction_matrix.py  correction_pipeline.py  deformation.py  envelope.py  ice6g_loader.py  ice7g_loader.py
paleoeurope/ice/: __init__.py  envelope.py
paleoeurope/utils/: __init__.py  grid.py  raster.py  tile_index.py
paleoeurope/viz/: __init__.py  hillshade.py  paleocostline_render.py
scripts/: download_sample_data.py  generate_synthetic_data.py  prepare_paleocostlines_clip.py  prepare_test_fixtures.py  run_full_pipeline.py  run_fusion.py  run_paleo.py
tests/: conftest.py  test_fusion.py  test_gia.py  test_integration.py  test_viz.py
tests/fixtures/: README.md
tests/fixtures/egm2008/: egm2008_fixture.tif
tests/fixtures/gebco/: GEBCO_2024_fixture.tif
tests/fixtures/ice7g/: ICE7G_fixture.nc  README.md
