[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paleoeurope"
version = "0.1.0-alpha"
description = "Reproducible pipeline for generating paleo-DEM reconstructions of Europe (Last Glacial Maximum to present)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "PaleoEurope Authors" },
]
keywords = ["paleogeography", "DEM", "GIA", "FABDEM", "GEBCO", "geomorphology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "xarray>=2024.3.0",
    "rasterio>=1.3.10",
    "rioxarray>=0.17.0",
    "netcdf4>=1.7.1",
    "pyproj>=3.6.1",
    "GDAL",
    "shapely",
]

[project.optional-dependencies]
distributed = [
    "celery>=5.4.0",
    "redis>=5.0.4",
]
viz = [
    "geopandas",
    "matplotlib>=3.8.4",
    "cartopy>=0.23.0",
    "imageio",
    "pillow",
    "pandas",
]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.7",
    "nbconvert>=7.16.4",
]

[project.urls]
Homepage = "https://github.com/archerby/paleoeurope-dem"
Repository = "https://github.com/archerby/paleoeurope-dem"

[tool.setuptools.packages.find]
where = ["."]
include = ["paleoeurope*"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "integration: marks tests that require real data files",
    "slow: marks tests as slow-running",
]

[tool.coverage.run]
source = ["paleoeurope"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
fail_under = 60
